test-suite/valid/repository-minimal.glx
# TEST: repository-minimal
# EXPECT: valid
# DESCRIPTION: Minimal valid repository with required fields (id, version, name)
---
id: repository-test001
version: "1.0"
name: "Test Repository"




