test-suite/invalid/repository-missing-name.glx
# TEST: repository-missing-name
# EXPECT: invalid
# ERROR: "name is required"
# DESCRIPTION: Repository entity missing required name field
---
id: repository-test002
version: "1.0"




